<resources>
    <string name="app_name">SuulPlayer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="player">Player</string>
    <string name="first">First</string>
    <string name="back">Back</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="last">Last</string>
</resources>
